[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
cookie = "0.18.0"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
url = { version = "2.5.0", features = ["serde"] }
web-sys = { version = "0.3.67", features = ["HtmlDocument"] }
